--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "predeploy": "npm run build",
+    "predeploy": "vite build",
     "deploy": "gh-pages -d dist",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "homepage": "https://Alpha3625.github.io/Flet-test",
   "dependencies": {
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
